--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "http": "^0.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-cors": "^0.0.16",
     "koa-json": "^2.0.2",
     "koa-less": "^0.0.3",
     "koa-logger": "^3.2.0",
@@ -69,6 +70,9 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-taro": "1.2.24",
+    "stylelint": "^10.0.1",
+    "stylelint-config-taro-rn": "^1.2.26",
+    "stylelint-taro-rn": "^1.2.26",
     "typescript": "^3.0.1"
   }
 }
